# embassy-supervisor

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
bootloader/: Cargo.toml  build.rs  memory.x
bootloader/src/: main.rs
firmware/: Cargo.toml  README.md  build.rs  memory-ota.x  memory.x
firmware/src/: bench.rs  heap.rs  heartbeat.rs  http.rs  main.rs  net.rs  ota.rs  watchdog.rs
firmware/tools/: wrk-tasks.lua
supervisor/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
supervisor-macros/: CHANGELOG.md  Cargo.toml  README.md
supervisor-macros/src/: lib.rs
supervisor-macros/tests/: ui.rs
supervisor-macros/tests/ui/compile_fail/: bad_policy_not_constructor.rs  bad_policy_not_constructor.stderr  cfg_on_pool_mode.rs  cfg_on_pool_mode.stderr  cycle.rs  cycle.stderr  duplicate_dep.rs  duplicate_dep.stderr  duplicate_name.rs  duplicate_name.stderr  executor_closure_spawn.rs  executor_closure_spawn.stderr  executor_without_spawn.rs  executor_without_spawn.stderr  local_with_executor.stderr  missing_deps_colon.rs  missing_deps_colon.stderr  missing_keyword.rs  missing_keyword.stderr  pool_closure.rs  pool_closure.stderr  pool_max_gt_members.rs  pool_max_gt_members.stderr  pool_min_gt_max.rs  pool_min_gt_max.stderr  pool_missing_field.rs  pool_missing_field.stderr  pool_size_without_task.rs  pool_size_without_task.stderr  pool_unknown_executor.rs  pool_unknown_executor.stderr  resources_duplicate_marker.rs  resources_duplicate_marker.stderr  resources_duplicate_name.rs  resources_duplicate_name.stderr  resources_empty.rs  resources_empty.stderr  resources_on_parked.rs  resources_on_parked.stderr  resources_on_pool.rs  (+23 more)
supervisor-macros/tests/ui/compile_fail_local/: local_with_executor.rs  local_with_executor.stderr
supervisor-macros/tests/ui/compile_fail_no_local/: local_requires_feature.rs  local_requires_feature.stderr
supervisor-macros/tests/ui/compile_pass/: cfg_gated.rs  cfg_on_pool.rs  cfg_on_pool_deps.rs  complex_graph.rs  disabled_nodes.rs  executor_slot.rs  long_chain_order.rs  multi_cfg_attrs.rs  pool_dep.rs  pool_explicit_policy_type.rs  pool_single_member.rs  resource_kinds.rs  resource_slots.rs  spawn_forms.rs  spawn_partial_fallible_multi_arg.rs  task_shells.rs  topo_order.rs  trailing_commas.rs
supervisor-macros/tests/ui/compile_pass_local/: resource_kinds_local.rs
supervisor/src/: fmt.rs  lib.rs  pool.rs  trace.rs
supervisor/tests/: metadata_names.rs  multicore.rs  provider_node.rs  public_api.rs  resource_kinds.rs  resource_slots.rs  task_shells.rs  teardown.rs  trace.rs  trace_nested.rs
