# Workspace for the embassy task supervisor.
#
# - `supervisor` : the generalized, HAL-agnostic task-lifecycle supervisor (the
#   publishable `embassy-supervisor` crate). Pure embassy, no board specifics.
# - `supervisor-macros` : the proc-macro crate providing `supervisor_graph!`
#   (re-exported by `supervisor`; receives the forwarded `pool` feature).
# - `firmware`   : the RP2350 application that drives the supervisor over a
#   USB-CDC-NCM network with an HTTP control plane, an elastic worker pool, and OTA.
# - `bootloader` : the embassy-boot-rp A/B bootloader.
[workspace]
resolver = "2"
members = ["supervisor", "supervisor-macros", "firmware", "bootloader"]

[workspace.package]
edition = "2024"
authors = ["Cedric Rivard <cedric@rivard.info>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cedrivard/embassy-supervisor"
rust-version = "1.85"

# Size/perf profile for the embedded binaries (mirrors the embassy templates).
[profile.release]
debug = 2
lto = "fat"
opt-level = "s"
codegen-units = 1

[profile.dev]
opt-level = "s"          # 'z'/'s' so the unoptimized embassy build still fits/links
