[package]
name = "embassy-supervisor"
version = "0.1.1"
description = "A generic, HAL-agnostic task-lifecycle supervisor for the embassy async embedded framework: dependency-ordered bring-up/teardown, lifecycle modes, elastic task pools, and runtime start/stop/pause/resume control."
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/embassy-supervisor"
keywords = ["embassy", "async", "embedded", "supervisor", "no-std"]
categories = ["embedded", "asynchronous", "no-std"]

[dependencies]
# Pure-embassy dependencies only — no HAL, no allocator, no board crates, so the
# supervisor compiles for any embassy target.
# Version set aligned with embassy-rp 0.10 (the firmware's HAL): executor 0.10,
# sync 0.8, time 0.5. The supervisor and a firmware MUST share these so the
# `Spawner`/`SpawnError` types match.
embassy-executor = { version = "0.10" }     # Spawner / SpawnError types only
embassy-sync = { version = "0.8" }
embassy-time = { version = "0.5" }
embassy-futures = { version = "0.1" }
portable-atomic = { version = "1", features = ["critical-section"] }
defmt = { version = "1", optional = true }
# The `supervisor_graph!` proc-macro (single-source, compile-time graph).
embassy-supervisor-macros = { path = "../supervisor-macros", optional = true }

[features]
# Full-featured out of the box; a footprint-constrained consumer trims with
# `default-features = false` and opts back into what it needs.
default = ["control", "pool", "macros"]
# Runtime control plane: ControlOp, request_control/apply_control, activate/deactivate.
control = []
# Elastic worker pools: the `pool` module, run_pools, load scaling. Forwarded to
# the proc-macro (weak `?`, so only when the optional `macros` dep is enabled) so
# `supervisor_graph!` emits the `GRAPH.pools` field iff this feature is on.
pool = ["embassy-supervisor-macros?/pool"]
# Logging via defmt (otherwise the log macros are no-ops).
defmt = ["dep:defmt"]
# Re-export the `supervisor_graph!` proc-macro.
macros = ["dep:embassy-supervisor-macros"]

[package.metadata.docs.rs]
# Document every feature (control/pool/defmt) on docs.rs.
all-features = true

# Test-only host shims, scoped to non-embedded targets so they never pull `std`
# into the pinned `thumbv8m` (embedded) build. Dev-dependencies don't propagate to
# consumers, and this target gate keeps the std-requiring features off the MCU target
# entirely (so `cargo build`/analysis for thumbv8m stays no_std). Host tests need:
#   * a critical-section impl, for the `CriticalSectionRawMutex` behind the pool's
#     state cell (and `Signal`/`Channel`); and
#   * an embassy-time driver, because the crate links `embassy_time::Timer`, which
#     requires a registered global driver at link time even if a test never fires one.
# (If `mock-driver` is ever unavailable, `features = ["std"]` is an equivalent fallback.)
[target.'cfg(not(target_os = "none"))'.dev-dependencies]
critical-section = { version = "1", features = ["std"] }
embassy-time = { version = "0.5", features = ["mock-driver"] }
